--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,6 +1,6 @@
 ul {
     display: grid;
+    gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    grid-gap: 1rem;
 }
 
